// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dynamic translations Translates with dynamic key 1`] = `
Array [
  "custom1 name",
  "custom2 name",
]
`;

exports[`Translate Escapes JSX in values 1`] = `
Array [
  "bob ",
  "<strong/>",
  "",
]
`;

exports[`Translate Escapes JSX in values 2`] = `
Array [
  "bob ",
  "<details/>",
  "",
]
`;

exports[`Translate Escapes JSX in values 3`] = `"bob"`;

exports[`Translate Escapes JSX in values 4`] = `
Array [
  "",
  <strong />,
  " in string",
]
`;

exports[`Translate Renders null on Error 1`] = `null`;

exports[`Translate Renders null on Error 2`] = `null`;

exports[`Translate Renders null on Error 3`] = `null`;

exports[`Translate Translates with JSX in values 1`] = `
Array [
  "",
  <strong>
    plural
  </strong>,
  "",
  <small>
    jsx
  </small>,
  "",
]
`;

exports[`Translate Translates with JSX in values 2`] = `
Array [
  "",
  <strong>
    bold
  </strong>,
  "",
  <small>
    tiny
  </small>,
  "",
]
`;

exports[`Translate Translates with JSX in values 3`] = `
Array [
  "",
  <small>
    Tres petit
  </small>,
  "",
  <strong>
    gras
  </strong>,
  "",
]
`;
